# tag-finder-cli

./: Cargo.toml  README.md  tag-finder.toml
frontend/: Cargo.toml  Trunk.toml  index.html
frontend/src/: app.rs  lib.rs  types.rs
frontend/src/components/: analysis_results.rs  controls.rs  file_section.rs  loading.rs  mod.rs  word_results.rs
frontend/src/services/: mod.rs  tauri.rs
src/: config.rs  css_parser.rs  file_walker.rs  lib.rs  main.rs  parallel_processor.rs  progress_reporter.rs  scanner.rs  text_processor.rs  traits.rs  unused_detector.rs  utils.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/banner/: banner.txt
