[package]
name = "tag-finder"
version = "0.1.0"
edition = "2024"

[dependencies]
walkdir = "2.4"
clap = { version = "4.4", features = ["derive"] }
regex = "1.10"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
rayon = "1.8"
crossbeam-channel = "0.5"
num_cpus = "1.16"
toml = "0.8"