[package]
name = "tag-finder-yew"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "app"
path = "src/lib.rs"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
yew-hooks = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
gloo = "0.11"
log = "0.4"
wasm-logger = "0.2"